# dfir-ogre-common

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  README.md  dfir_ogre_common.pyi  pyproject.toml
docs/superpowers/plans/: 2026-06-15-output-field-traversal.md  2026-07-01-qualifier-hard-removal.md
docs/superpowers/specs/: 2026-06-15-output-field-traversal-design.md  2026-07-01-qualifier-hard-removal-design.md
src/: config_parser.rs  configuration.rs  date_util.rs  errors.rs  field.rs  field_mapping.rs  field_traversal.rs  format_csv.rs  format_json.rs  lib.rs  lib_py.rs  line_builder.rs  metadata.rs  output.rs  output_writer.rs  qualifiers.rs  record.rs  registry_api.rs  seven_zip_unpack.rs  timeline.rs  value.rs  windows_utils.rs
src/parser/: csv.rs  evtx.rs  hive.rs  json.rs  mod.rs  regexp.rs  sqlite.rs  srum.rs  windows_parsers.rs  xml.rs
test_data/7z/: Event.7z  secret.7z
test_data/config/: lnk.xml
test_data/csv/: NTFSInfo.xml  NTFSInfoError.csv  NTFSInfo_with_unmapped.xml  autoruns.xml
test_data/evtx/: evtx.xml  system_hive_with_service_events.evtx  test_evt_4697.evtx  test_evt_7045.evtx  test_evt_7045bis.evtx  w7_evtx_system.evtx  windows_powershell.evtx
test_data/hive/: hive.xml
test_data/json/: json.xml  json_file.json  web_history_jsonl.xml
test_data/leveldb/: 000005.ldb  MANIFEST-000007
test_data/logs/: ngen.xml  win2k.xml  win2k_last_field_error.xml
test_data/sqlite/: activities_cache.xml  sqlite.xml
test_data/srum/: srum.xml
test_data/xml/: library_config.xml
