[package]
name = "dfir-ogre-common"
version = "2.0.0-beta1"
edition = "2024"
description = "This project is part of the [DFIR-OGRE](https://github.com/ANSSI-FR/dfir-ogre) suite and provides a low level Rust runtime to run DFIR-OGRE plugins."
homepage = "https://github.com/ANSSI-FR/dfir-ogre-common"
repository = "https://github.com/ANSSI-FR/dfir-ogre-common"
documentation = "https://github.com/ANSSI-FR/dfir-ogre-common"
readme = "README.md"
licence = "Apache 2.0"

[lib]
name = "dfir_ogre_common"
crate-type = ["cdylib", "lib"]

[dependencies]
# core lib
base64 = { version = "0.22.1" }
chrono = "0.4.44"
flate2 = { version = "1.1.9", features = ["zlib-rs"], default-features = false }
indexmap = "2.13.0"
log = { version = "0.4.29" }
pyo3 = { version = "0.28.2", features = ["abi3-py310", "chrono"] }
pyo3-log = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = "2.0.18"
xmltree = { version = "0.12.0" }
zerocopy = { version = "0.8.40" }
blake3 = { version = "1.8.3" }
sevenz-rust2 = { version = "0.20.2" }

# file encoding
encoding_rs = { version = "0.8.35" }
encoding_rs_io = { version = "0.1.7" }

# parsing library
dfir-nt-hive = {  git = "git+ssh://git@github.com/ANSSI-FR/dfir-nt-hive.git" }
csv = { version = "1.4.0" }
libesedb = { version = "0.2.7" }
evtx = { version = "0.11.1" }
hex = "0.4.3"
regex = { version = "1.12.3" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
sxd-document = { version = "0.3.2" }
sxd-xpath = { version = "0.4.2" }


[dev-dependencies]
rand = { version = "0.10.0" }

[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"
codegen-units = 1
debug = false
